# gnu_xmlat

./: .gitignore  AUTHORS  Changes  Makefile.am  Manual.txml  README  configure.ac  dirs  makegen  pkg-list.scm  templatereader  xmlat.scm  xmlatc  xmlatdoc
doc/doc.ddt/: doc-idx.html  doc.ddt.html  doc.html
doc/lang.ddt/: doc-idx.html  doc.html  lang.ddt.html
doc/ml.ddt/: doc-idx.html  doc.html  ml.ddt.html
images/: obsolete
stdext/: ml.ddt  msword.ddt  sd.ddt
stdlib/: doc.ddt  lang.ddt
xmlat/: Makefile.am  commands.scm  json.scm  read.scm  regexp.scm  shell.scm  strop.scm  utils.scm  version.scm  xml.scm
xmlat/commands/: Makefile.am  compile.scm  convert.scm  help.scm  lint.scm  test.scm
xmlat/json/: README  builder.scm  parser.scm  syntax.scm
xmlat/lint/: xml.scm
